tests/errors/control_flow/loop_range_violations.sad
method foo() {}
Cycle i = foo : 10 {}
